<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_logoIMEImageView"
            android:src="@drawable/logo_ufba"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_matriculaTextView"
            android:text="@string/matricula"
            android:textStyle="bold"
            android:layout_below="@id/login_logoIMEImageView"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_matriculaEditText"
            android:layout_below="@id/login_matriculaTextView"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_senhaTextView"
            android:text="@string/senha"
            android:textStyle="bold"
            android:layout_below="@id/login_matriculaEditText"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_senhaEditText"
            android:layout_below="@id/login_senhaTextView"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/login_loginButton"
            android:text="@string/login"
            android:textColor="@color/white"
            android:background="@drawable/botao_redondo"
            android:layout_below="@id/login_senhaEditText"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:onClick="botaoLogin"/>

    </RelativeLayout>



</ScrollView>
