<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="br.ufba.chavesime.CronogramaActivity"
    android:contextClickable="true">


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:titleTextColor="@color/white"
        android:theme="@style/ThemeOverlay.AppCompat"
        android:id="@+id/homeToolbar"
        android:textAlignment="center">
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/homeToolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sala"
            android:id="@+id/textSala"
            android:gravity="center_vertical"
            android:textSize="35sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignBottom="@+id/ddownSala" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ddownSala"
            android:spinnerMode="dropdown"
            android:layout_gravity="right"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/textHorario"
            android:layout_marginLeft="15dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="7dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/data"
            android:id="@+id/textData"
            android:layout_gravity="left|center_vertical"
            android:gravity="center_vertical"
            android:textSize="35dp"
            android:layout_below="@+id/ddownSala"
            android:layout_marginTop="35dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:ems="10"
            android:id="@+id/editTextData"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/ddownSala"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@+id/textHorario"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:autoText="false"
            android:editable="false"
            android:textColor="@color/colorPrimary"
            android:onClick="showDatePickerDialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/horario"
            android:id="@+id/textHorario"
            android:layout_gravity="left"
            android:layout_below="@+id/textData"
            android:layout_alignBottom="@+id/ddownHorario"
            android:layout_marginTop="40dp"
            android:textIsSelectable="true"
            android:textSize="35dp"
            android:gravity="center" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ddownHorario"
            android:spinnerMode="dropdown"
            android:layout_toEndOf="@+id/textHorario"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/editTextData"
            android:layout_marginTop="40dp"
            android:layout_gravity="right"
            android:layout_marginLeft="15dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonBuscarCronograma"
            android:text="@string/buscarCronograma"
            android:textColor="@color/white"
            android:background="@drawable/botao_redondo"
            android:clickable="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="false"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="false"
            android:layout_below="@+id/textHorario"
            android:layout_marginTop="40dp"
            android:onClick="botaoBuscarCronograma"
            android:minWidth="180dp" />

    </RelativeLayout>


</RelativeLayout>
